tunneling-outbound-traffic-vms/samples/http-proxy/gateway/tls-passthrough/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-app-via-egress-gateway
spec:
  hosts:
  - external-app.corp.net
  gateways:
  - istio-egressgateway
  - mesh
  tls:
  # routing for traffic going to HTTPS server on port 443
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - external-app.corp.net
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 443
  - match:
    - gateways:
      - istio-egressgateway
      port: 443
      sniHosts:
      - external-app.corp.net
    route:
    - destination:
        host: external-forward-proxy.corp.net
        subset: external-app-443
#        subset: external-app-8443
        port:
          number: 3080
